manifests/suspended/openlist/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openlist
spec:
  selector:
    app: openlist
  ports:
    - name: http
      port: 5244
      targetPort: 5244
